Website-Resume-Project/Website-Resume-Project/style.css
*{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}
body {
    font-family: "Poppins", sans-serif;
    --color1: #FFF ;
    --color2: #000000 ;
}
/*NAV BAR START*/
.nav-bar {
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    list-style: none;
    position: fixed;
    background-color: var(--color2);
    padding: 12px 20px;
    z-index: 10;
}
.logo img {width: 40px;}
.menu {display: flex;}
.menu li {padding-left: 30px;}
.menu li a {
    display: inline-block;
    text-decoration: none;
    color: var(--color1);
    text-align: center;
    transition: 0.15s ease-in-out;
    position: relative;
    text-transform: uppercase;
}
.menu li a::after {
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    width: 0;
    height: 1px;
    background-color: var(--color1);
    transition: 0.15s ease-in-out;
}
.menu li a:hover:after {width: 100%;}
.open-menu , .close-menu {
    position: absolute;
    color: var(--color1);
    cursor: pointer;
    font-size: 1.5rem;
    display: none;
}
.open-menu {
    top: 50%;
    right: 20px;
    transform: translateY(-50%);
}
.close-menu {
    top: 20px;
    right: 20px;
}
#check {display: none;}
@media(max-width: 610px){
    .menu {
        flex-direction: column;
        align-items: center;
        justify-content: center;
        width: 80%;
        height: 100vh;
        position: fixed;
        top: 0;
        right: -100%;
        z-index: 100;
        background-color: var(--color2);
        transition: all 0.2s ease-in-out;
    }
    .menu li {margin-top: 40px;}
    .menu li a {padding: 10px;}
    .open-menu , .close-menu {display: block;}
    #check:checked ~ .menu {right: 0;}
}
/*NAV BAR END*/
/*ABOUT ME SECTION START*/
#about-me-h1 {
    text-align: center;
    padding-top: 120px;
}

#introduction-text {
    text-align: center;
    padding-left: 70px;
    padding-right: 70px;
    padding-bottom: 40px;
    padding-top: 160px;
}

#about-section {
    width: 100%;
    height: 100vh;
}

/*ABOUT ME SECTION END*/

/*PROJECTS SECTION START*/
#projects-h1 {
    text-align: center;
    padding-bottom: 10px;
}
/*PROJECTS SECTION END*/

/*LOADING ANIMATION START*/
#loading-animation{
    display: flex;
    height: 50vh;
    width: 100%;
    align-items: center;
    justify-content: center;
    background-image: url('https://github.com/RenePung/Website-Resume-Project/blob/main/Thumbnail%20Pictures/TradingViewProject%20Thumbnail.png?raw=true');
  /* Add other background properties as needed, e.g., background-size, background-position, etc. */
  background-size: cover;
  background-position: center;
  }
  #loading-animation .dots span{
    position: absolute;
    height: 10px;
    width: 10px;
    background: #fff;
    border-radius: 50%;
    transform: rotate(calc(var(--i) * (360deg / 15))) translateY(35px);
    animation: animate 1.5s linear infinite;
    animation-delay: calc(var(--i) * 0.1s);
    opacity: 0;
  }
  @keyframes animate {
   0%{
     opacity: 1;
   }
   100%{
     opacity: 0;
   }
  }
  /*LOADING ANIMATION END*/

